--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -25,7 +25,7 @@
 
         a,
         p {
-            color: #73a4cb
+            color: #071016
         }
 
         a {
@@ -35,7 +35,7 @@
         .container {
             max-width: 550px;
             margin: auto;
-            background-color: #fff;
+            background-color: rgb(184, 254, 255);
             -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
             box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
         }
@@ -52,7 +52,11 @@
             padding: 10px;
             border-radius: 5px 5px 0 0;
             /* background: linear-gradient(90deg, #EEA390 0%, #EB796F 43%, #EB796F 100%); */
-            background: linear-gradient(90deg, rgb(145, 207, 245) 0%, #3bb5e5 43%, #3782dd 100%);
+            /* background: linear-gradient(90deg, rgb(145, 207, 245) 0%, #3bb5e5 43%, #3782dd 100%); */
+            background: #0cebeb;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
         }
 
         .header-bar a {
@@ -64,8 +68,8 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: rgb(255, 255, 255);
-            border-top: 1px solid #dfe4ea;
+            background-color: rgb(143, 255, 253);
+            border-top: 1px solid #020305;
             overflow: hidden;
         }
 
@@ -83,14 +87,14 @@
         .task-complete-icon {
             height: 20px;
             width: 20px;
-            background-color: rgb(68, 119, 166);
+            background-color: rgb(75, 198, 141);
             border-radius: 50%;
         }
 
         .task-incomplete-icon {
             height: 20px;
             width: 20px;
-            background-color: rgb(218, 218, 218);
+            background-color: rgb(232, 104, 104);
             border-radius: 50%;
         }
 
@@ -187,6 +191,7 @@
 
         .card-body {
             padding: 20px;
+            background-color: rgb(182, 255, 255);
         }
 
 
